# print-logger

./: LICENSE.md  README.md  example.py  setup.cfg
.github/workflows/: codeql.yml
printlogger/: __init__.py
