[metadata]
name = printlogger
version = 2.1.0
author = Monsta
author_email = monsta8896@gmail.com
description = A configurable, drop-in print replacement with file logging and rotation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m0nsta8896/logger
license = MIT
keywords = logger, logging, print-override

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
